--- a/new.css
+++ b/new.css
@@ -591,8 +591,8 @@ button:hover {
   }
   
   .circle {
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     background-color: #007bff;
     display: flex;
@@ -617,7 +617,7 @@ button:hover {
     content: '';
     position: absolute;
     width: 2px;
-    background-color: #007bff;
+    background-color: #fff;
     top: 30px;
     bottom: 0;
     left: 50%;
