--- a/new.css
+++ b/new.css
@@ -23,11 +23,12 @@ body {
 }
 
 .hero img {
-    width: 200px;
-    height: 200px;
+    width: 350px;
+    height: 350px;
     border-radius: 50%;
+    overflow: hidden;
     border: 5px solid #fff;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .hero h1 {
