--- a/new.css
+++ b/new.css
@@ -93,7 +93,7 @@ nav ul li a:hover {
     text-align: center;
     padding: 100px 30px;
     filter:brightness(10);
-    background: url('intro section images/abstract-black-wallpaper-preview.jpg') no-repeat center center/cover;
+    background: url('abstract-black-wallpaper-preview.jpg') no-repeat center center/cover;
     background-color: #8593a9; /* Fallback for no image */
 }
 
