--- a/new.css
+++ b/new.css
@@ -111,6 +111,9 @@ nav ul li a:hover {
     object-fit: cover;
 }
 
+#desc{color:white;}
+
+
 h2.gradient-text {
     font-size: 2.5rem;
     color: transparent;
