--- a/new.css
+++ b/new.css
@@ -128,6 +128,11 @@ h2.gradient-text {
     margin-bottom: 30px;
 }
 
+#desc {
+    color: white;
+}
+
+
 .portfolio-btn {
     background-color: #333;
     color: white;
