--- a/new.css
+++ b/new.css
@@ -2,6 +2,8 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f0f4f8; /* Light blueish-gray */
+    margin: 0;
+    padding: 0;
 }
 
 /* Center Image and Text */
