--- a/new.css
+++ b/new.css
@@ -117,7 +117,7 @@ body {
 .intro-section {
     text-align: center;
     padding: 100px 30px;
-    background: url('abstract-black-wallpaper-preview.jpg') no-repeat center center/cover;
+    background: url('about section img/abstract-black-wallpaper-preview.jpg') no-repeat center center/cover;
     background-color: #8593a9; /* Fallback for no image */
 }
 
